--- a/en/tools/life/screen-recorder/index.html
+++ b/en/tools/life/screen-recorder/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Screen Recorder - Toolneat</title>
-  <meta name="description" content="Free online screen recorder. Record screen, window, or tab. Save as MP4 or WEBM. Include microphone audio. No upload to servers.">
+  <meta name="description" content="Free online screen recorder. Record screen, window, or tab with microphone audio. No software installation required. All processing in browser for privacy.">
   <link rel="canonical" href="https://toolneat.com/en/tools/life/screen-recorder/">
   <link rel="alternate" hreflang="ko" href="https://toolneat.com/tools/life/screen-recorder/">
   <link rel="alternate" hreflang="en" href="https://toolneat.com/en/tools/life/screen-recorder/">
@@ -18,8 +18,6 @@
   <script src="../../../../assets/js/common.js"></script>
   <script src="../../../../assets/js/i18n.js"></script>
   <script src="../../../../assets/js/components.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.12.7/dist/umd/ffmpeg.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/util@0.1.1/dist/umd/index.min.js"></script>
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Toolneat">
   <meta property="og:title" content="Screen Recorder - Toolneat">
@@ -40,10 +38,6 @@
     .record-btn.recording::after{content:'';display:block;width:24px;height:24px;background:#fff;border-radius:4px;margin:auto}
     @keyframes pulse{0%,100%{box-shadow:0 0 0 0 rgba(239,68,68,.4)}50%{box-shadow:0 0 0 16px rgba(239,68,68,0)}}
     .timer{font-size:2rem;font-weight:bold;font-family:monospace}
-    .loading-overlay{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;z-index:100}
-    .loading-overlay.show{display:flex}
-    .spinner{width:48px;height:48px;border:4px solid #e5e7eb;border-top-color:#3b82f6;border-radius:50%;animation:spin 1s linear infinite}
-    @keyframes spin{to{transform:rotate(360deg)}}
   </style>
 </head>
 <body class="min-h-screen flex flex-col">
@@ -78,14 +72,7 @@
           <div class="preview-container mb-6">
             <video id="result-video" controls></video>
           </div>
-          <div class="mb-4">
-            <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Save Format</label>
-            <select id="format" class="input">
-              <option value="mp4">MP4 (Recommended - All devices compatible)</option>
-              <option value="webm">WEBM (Fast save)</option>
-            </select>
-            <p id="mp4-warning" class="text-xs text-yellow-600 mt-1 hidden">⚠️ MP4 conversion only works on HTTPS.</p>
-          </div>
+          <p class="text-sm text-gray-500 mb-4 text-center">Saves as WEBM format. To convert to GIF, use <a href="/en/tools/life/video-to-gif/" class="text-blue-500 hover:underline">Video to GIF</a> tool.</p>
           <div class="flex gap-3">
             <button id="download-btn" class="btn btn-primary flex-1">Download</button>
             <button id="new-btn" class="btn btn-secondary flex-1">New Recording</button>
@@ -105,16 +92,16 @@
           <h3 class="text-lg font-semibold text-gray-900 dark:text-white mt-6 mb-3">Frequently Asked Questions</h3>
           <div class="space-y-4">
             <div>
-              <h4 class="font-medium text-gray-900 dark:text-white">Q: Should I choose MP4 or WEBM?</h4>
-              <p class="text-gray-600 dark:text-gray-400">MP4 is compatible with all devices. WEBM saves faster but may not play on some devices.</p>
+              <h4 class="font-medium text-gray-900 dark:text-white">Q: WEBM file won't play</h4>
+              <p class="text-gray-600 dark:text-gray-400">WEBM plays in most browsers (Chrome, Firefox, Edge) and modern devices. If Windows Media Player doesn't work, try VLC player.</p>
             </div>
             <div>
               <h4 class="font-medium text-gray-900 dark:text-white">Q: Can I record microphone audio?</h4>
               <p class="text-gray-600 dark:text-gray-400">Yes, check 'Include Microphone' to record your voice. Great for tutorials.</p>
             </div>
             <div>
-              <h4 class="font-medium text-gray-900 dark:text-white">Q: Why doesn't MP4 conversion work?</h4>
-              <p class="text-gray-600 dark:text-gray-400">MP4 conversion requires HTTPS. On HTTP, only WEBM format is available.</p>
+              <h4 class="font-medium text-gray-900 dark:text-white">Q: How do I convert to GIF?</h4>
+              <p class="text-gray-600 dark:text-gray-400">After recording, use the <a href="/en/tools/life/video-to-gif/" class="text-blue-500 hover:underline">Video to GIF</a> tool. You can select clip range and adjust size.</p>
             </div>
             <div>
               <h4 class="font-medium text-gray-900 dark:text-white">Q: Is there a recording time limit?</h4>
@@ -127,24 +114,10 @@
     </div>
   </main>
   <div id="footer"></div>
-  <div id="loading-overlay" class="loading-overlay">
-    <div class="bg-white dark:bg-gray-800 rounded-2xl p-8 text-center">
-      <div class="spinner mx-auto mb-4"></div>
-      <p id="convert-status" class="text-gray-600 dark:text-gray-400">Converting to MP4...</p>
-    </div>
-  </div>
   <script>
     (function(){'use strict';
-    const preview=document.getElementById('preview'),previewPlaceholder=document.getElementById('preview-placeholder'),recordBtn=document.getElementById('record-btn'),timer=document.getElementById('timer'),status=document.getElementById('status'),controls=document.getElementById('controls'),resultSection=document.getElementById('result-section'),resultVideo=document.getElementById('result-video'),includeAudio=document.getElementById('include-audio'),loadingOverlay=document.getElementById('loading-overlay'),convertStatus=document.getElementById('convert-status'),formatSelect=document.getElementById('format'),mp4Warning=document.getElementById('mp4-warning');
-    let mediaRecorder,recordedChunks=[],stream,timerInterval,seconds=0,recordingBlob=null,ffmpeg=null;
-
-    // SharedArrayBuffer check - required for MP4 conversion
-    const canUseMp4=typeof SharedArrayBuffer!=='undefined';
-    if(!canUseMp4){
-      mp4Warning.classList.remove('hidden');
-      formatSelect.value='webm';
-      formatSelect.querySelector('option[value="mp4"]').textContent='MP4 (Unavailable - HTTPS required)';
-    }
+    const preview=document.getElementById('preview'),previewPlaceholder=document.getElementById('preview-placeholder'),recordBtn=document.getElementById('record-btn'),timer=document.getElementById('timer'),status=document.getElementById('status'),controls=document.getElementById('controls'),resultSection=document.getElementById('result-section'),resultVideo=document.getElementById('result-video'),includeAudio=document.getElementById('include-audio');
+    let mediaRecorder,recordedChunks=[],stream,timerInterval,seconds=0,recordingBlob=null;
 
     recordBtn.addEventListener('click',async()=>{
       if(mediaRecorder&&mediaRecorder.state==='recording'){mediaRecorder.stop();return}
@@ -189,58 +162,12 @@
       timer.textContent=`${m}:${s}`;
     }
 
-    document.getElementById('download-btn').addEventListener('click',async()=>{
+    document.getElementById('download-btn').addEventListener('click',()=>{
       if(!recordingBlob)return;
-      const format=document.getElementById('format').value;
-
-      if(format==='webm'||!canUseMp4){
-        const a=document.createElement('a');
-        a.href=URL.createObjectURL(recordingBlob);
-        a.download='recording.webm';
-        a.click();
-        if(format==='mp4'&&!canUseMp4)toast.warning('MP4 unavailable. Downloading as WEBM.');
-        return;
-      }
-
-      // MP4 conversion
-      loadingOverlay.classList.add('show');
-      convertStatus.textContent='Loading FFmpeg...';
-
-      try{
-        if(!ffmpeg){
-          const {FFmpeg}=FFmpegWASM;
-          ffmpeg=new FFmpeg();
-          await ffmpeg.load({
-            coreURL:'https://cdn.jsdelivr.net/npm/@ffmpeg/core@0.12.4/dist/umd/ffmpeg-core.js',
-            wasmURL:'https://cdn.jsdelivr.net/npm/@ffmpeg/core@0.12.4/dist/umd/ffmpeg-core.wasm'
-          });
-        }
-
-        convertStatus.textContent='Preparing conversion...';
-        const {fetchFile}=FFmpegUtil;
-        await ffmpeg.writeFile('input.webm',await fetchFile(recordingBlob));
-
-        convertStatus.textContent='Converting to MP4... (Please wait)';
-        await ffmpeg.exec(['-i','input.webm','-c:v','libx264','-preset','fast','-crf','22','-c:a','aac','output.mp4']);
-
-        const data=await ffmpeg.readFile('output.mp4');
-        const mp4Blob=new Blob([data.buffer],{type:'video/mp4'});
-
-        const a=document.createElement('a');
-        a.href=URL.createObjectURL(mp4Blob);
-        a.download='recording.mp4';
-        a.click();
-        toast.success('MP4 conversion complete!');
-      }catch(error){
-        console.error(error);
-        toast.error('MP4 conversion failed. Downloading as WEBM.');
-        const a=document.createElement('a');
-        a.href=URL.createObjectURL(recordingBlob);
-        a.download='recording.webm';
-        a.click();
-      }finally{
-        loadingOverlay.classList.remove('show');
-      }
+      const a=document.createElement('a');
+      a.href=URL.createObjectURL(recordingBlob);
+      a.download='recording.webm';
+      a.click();
     });
 
     document.getElementById('new-btn').addEventListener('click',()=>{
