--- a/en/index.html
+++ b/en/index.html
@@ -43,6 +43,25 @@
   <script src="/assets/js/tools-data.js"></script>
   <script src="/assets/js/components.js"></script>
   <script src="/assets/js/search.js" defer></script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Toolneat - Free Online Tools",
+    "description": "Free online tools for developers and everyday life. Base64, JSON formatter, QR generator, PDF tools and 100+ more tools available for free.",
+    "url": "https://toolneat.com/en/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://toolneat.com/en/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    }
+  }
+  </script>
 </head>
 <body class="min-h-screen flex flex-col">
   <!-- Header -->
