--- a/en/tools/dev/index.html
+++ b/en/tools/dev/index.html
@@ -15,6 +15,25 @@
   <script src="/assets/js/tools-data.js"></script>
   <script src="/assets/js/components.js"></script>
   <script src="/assets/js/search.js" defer></script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Developer Tools",
+    "description": "Free online tools for developers. Base64, JSON formatter, UUID generator, regex tester and 35+ more developer tools.",
+    "url": "https://toolneat.com/en/tools/dev/",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    },
+    "provider": {
+      "@type": "Organization",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    }
+  }
+  </script>
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 min-h-screen flex flex-col">
   <div id="header">
