--- a/en/tools/life/index.html
+++ b/en/tools/life/index.html
@@ -14,6 +14,25 @@
   <script src="/assets/js/tools-data.js"></script>
   <script src="/assets/js/components.js"></script>  <script src="/assets/js/search.js" defer></script>
   <script>localStorage.setItem('toolneat-lang', 'en');</script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Life Tools",
+    "description": "Free online tools for everyday life. QR generator, image editor, calculators, timers and 50+ more useful tools.",
+    "url": "https://toolneat.com/en/tools/life/",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    },
+    "provider": {
+      "@type": "Organization",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    }
+  }
+  </script>
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 min-h-screen flex flex-col">
   <div id="header">
