--- a/en/tools/pdf/index.html
+++ b/en/tools/pdf/index.html
@@ -15,6 +15,25 @@
   <script src="/assets/js/tools-data.js"></script>
   <script src="/assets/js/components.js"></script>
   <script src="/assets/js/search.js" defer></script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "PDF Tools",
+    "description": "Free online PDF editing tools. Merge, split, compress, convert PDFs and more with 10+ PDF tools.",
+    "url": "https://toolneat.com/en/tools/pdf/",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    },
+    "provider": {
+      "@type": "Organization",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    }
+  }
+  </script>
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 min-h-screen flex flex-col">
   <div id="header">
