--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
   <script src="./assets/js/tools-data.js"></script>
   <script src="./assets/js/components.js"></script>
   <script src="./assets/js/search.js" defer></script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Toolneat - 온라인 도구 모음",
+    "description": "개발자와 일상생활에 필요한 무료 온라인 도구 모음. Base64, JSON 포맷터, QR 생성기, PDF 도구 등 100개 이상의 도구를 무료로 사용하세요.",
+    "url": "https://toolneat.com/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://toolneat.com/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    }
+  }
+  </script>
 </head>
 <body class="min-h-screen flex flex-col">
   <!-- Header -->
