--- a/tools/dev/index.html
+++ b/tools/dev/index.html
@@ -14,6 +14,25 @@
   <script src="/assets/js/tools-data.js"></script>
   <script src="/assets/js/components.js"></script>
   <script src="/assets/js/search.js" defer></script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "개발 도구",
+    "description": "개발자를 위한 무료 온라인 도구 모음. Base64, JSON 포매터, UUID 생성기, 정규식 테스터 등 35개 이상의 개발 도구를 바로 사용하세요.",
+    "url": "https://toolneat.com/tools/dev/",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    },
+    "provider": {
+      "@type": "Organization",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    }
+  }
+  </script>
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 min-h-screen flex flex-col">
   <div id="header">
