--- a/tools/life/index.html
+++ b/tools/life/index.html
@@ -14,6 +14,25 @@
   <script src="/assets/js/tools-data.js"></script>
   <script src="/assets/js/components.js"></script>
   <script src="/assets/js/search.js" defer></script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "생활 도구",
+    "description": "일상생활에 유용한 무료 온라인 도구 모음. QR 생성기, 이미지 편집, 계산기, 타이머 등 50개 이상의 생활 도구를 바로 사용하세요.",
+    "url": "https://toolneat.com/tools/life/",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    },
+    "provider": {
+      "@type": "Organization",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    }
+  }
+  </script>
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 min-h-screen flex flex-col">
   <div id="header">
