--- a/tools/pdf/index.html
+++ b/tools/pdf/index.html
@@ -14,6 +14,25 @@
   <script src="/assets/js/tools-data.js"></script>
   <script src="/assets/js/components.js"></script>
   <script src="/assets/js/search.js" defer></script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "PDF 도구",
+    "description": "PDF 파일을 쉽게 편집하는 무료 온라인 도구 모음. PDF 병합, 분할, 압축, 변환 등 10개 이상의 PDF 도구를 바로 사용하세요.",
+    "url": "https://toolneat.com/tools/pdf/",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    },
+    "provider": {
+      "@type": "Organization",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    }
+  }
+  </script>
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 min-h-screen flex flex-col">
   <div id="header">
